# supstream

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  setup.sh
APIGateway/: api.py
Supstream/: CMakeLists.txt
Supstream/include/: ast.h  def.h  list.h  request.h  semantic.h
Supstream/samples/: gstdarknet_yolov4.yaml  matroska_video_0.yaml  mosaic.yaml  screenrecorder.yaml  slideshow.yaml  v4l2_dashsrc.yaml  videotestsrc_autovideosink.yaml  videotestsrc_glupload_glfiltercube_glimagesink.yaml  videotestsrc_srtsink.yaml  wavescope_voice.yaml  web-overlay-speaker.yaml  web-overlay.yaml
Supstream/src/: bus.c  config.c  debug.c  list.c  main.c
Supstream/src/ast/: ast.c
Supstream/src/ast/action/: element.c
Supstream/src/link/: pad.c
Supstream/src/request/: element.c  getter.c  state.c
Supstream/src/semantic/: semantic.c
Supstream/src/semantic/block/: caps.c  elements.c  properties.c
include/: .ast.h.swp  ast.h  bus.h  config.h  def.h  gateway.h  link.h  main.h  parse.h  pipeline.h  request.h  semantic.h  supstream.h  unit_tests.h  verify.h
plugin/: template.c
samples/: matroska_video_0.yaml  matroska_video_0_+_matroska_audio_0.yaml  matroska_video_0_ld.yaml  matroska_video_0_pre_defined.yaml  matroska_video_0_queue_matroska_audio_0.yaml  matroska_video_0_queue_matroska_audio_0_multiple.yaml  matroska_video_0_v4l2.yaml  mosaic.yaml  pulsesrc_audioecho_filesink.yaml  pulsesrc_filesink.yaml  screenrecorder.yaml  screenrecorder2.yaml  slideshow.yaml  supervision_matroska_video_0.yaml  v4l2_yolov4.yaml  v4l2src_dashsrc.yaml  v4l2src_shagadelictv_autovideosink.yaml  videotestsrc_autovideosink.yaml  videotestsrc_dashrc.yaml  videotestsrc_glupload_glfiltercube_glimagesink.yaml  videotestsrc_queue_audiotestsrc.yaml  videotestsrc_tee_queue_autovideosink.yaml  videotestsrc_videobox_compositor.yaml  videotestsrc_videoconvert_autovideosink.yaml
src/: ast.c  ast.h  bus.c  bus.h  config.c  config.h  def.h  default.c  default.h  fifo.c  fifo.h  gateway.c  linked.c  linked.h  main.c  parse.c  pipeline.c  pipeline.h  prev.c  request.c  request.h  semantic.c  semantic.h  verify.c  verify.h
src/ast/: .ast.c.swp  ast.c
src/ast/action/: element.c  pipeline.c
src/link/: element.c  pad.c
src/request/: caps.c  element.c  getter.c  info.c  link.c  property.c  quit.c  state.c
src/semantic/: config.c  semantic.c
src/semantic/block/: caps.c  element.c  elements.c  pads.c  pipeline.c  pipelines.c  properties.c
src/semantic/line/: element_link.c  set_delay.c  set_state.c
src/unit_tests/: .ast.c.swp  .main.c.swp  ast.c  ast_fsample.c  ast_fscratch.c  main.c
tests/: start_tests.sh  tests  tests.c
